--- a/templates/wholechorus.html
+++ b/templates/wholechorus.html
@@ -1,80 +1,63 @@
 {% extends "base.html" %}
 {% block content %}
-
 <h3 class="center-align page-title">Whole Chorus Tasks</h3>
 <div class="center-align">All tasks have been set by either Lucy or your section lead, just click on the song title for
-    more info. Please give us a shout if there's
-    anything you're unsure of!</div>
-
-{% if user.is_musicteam == "on" %}
-<div class="row">      
- <div class="col s4 offset-s4 add-task-button">
-        <a href="{{ url_for('add_task') }}">
-            <div class="card-panel pink accent-1 section-link">
-                Add Tasks
-            </div>
-        </a>
-    </div> 
-</div>  
-{% endif %}
-
-<div class="row">
-
-    {% for homework in homework %}
-    {% if homework.section_name|lower == "whole chorus"|lower %}
-
-    <div class="col s10 offset-s1 m6 l4">
-        <div class="card white-text pink accent-1">
-            <div class="card-title activator card-content center-align"><i class="fas fa-music"></i>
-                {{ homework.song_name }}<br>
-                By: {{ homework.due_date }}
-                
-                
-                {% if user.is_musicteam == "on" %}
-                <!-- Modal Trigger -->
-                <div class="card-action card-links">
-                    
-                        
-                            <a href="{{ url_for('edit_task', homework_id=homework._id) }}" class = "grey-text text-darken-4 edit-button">Edit</a>             
-                            <a href="#{{ homework._id }}" class ="modal-trigger white-text delete-button">Delete</a>
-                </div>
-                            <!-- Modal Structure -->
-                            <div id="{{ homework._id }}" class="modal">
-                                <div class="modal-content">
-                                    <h4>Delete Task</h4>
-                                    <p>Are you sure you wish to delete this task?</p>
-                                </div>
-                                <div class="modal-footer">
-                                    <a href="{{ url_for ('homework') }}"
-                                        class="modal-close pink lighten-2 white-text form-button btn-flat">Cancel</a>
-                                    <a href="{{ url_for ('delete_task_musicteam', homework_id=homework._id) }}"
-                                        class="modal-close red accent-4 white-text form-button btn-flat">Delete</a>
-                                </div>
-                            </div>
-                        
-                    
-                
-                {% endif %} 
-            </div>
-                
-            
-            <div class="card-reveal">
-                <div class="card-title grey-text text-darken-4">{{ homework.song_name }}<i
-                        class="fas fa-times right"></i>
-                    <p class="task-title">{{ homework.task_title }}</p>
-                    <p class="task-description">{{ homework.task_description }}</p>
-                    <p class="task-set-by">Task set by {{ homework.created_by }}</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    {% endif %}
-    {% endfor %}
-
-  
-
+   more info. Please give us a shout if there's
+   anything you're unsure of!
 </div>
-
-
-
+{% if user.is_musicteam == "on" %}
+<div class="row">
+   <div class="col s4 offset-s4 add-task-button">
+      <a href="{{ url_for('add_task') }}">
+         <div class="card-panel pink accent-1 section-link">
+            Add Tasks
+         </div>
+      </a>
+   </div>
+</div>
+{% endif %}
+<div class="row">
+   {% for homework in homework %}
+   {% if homework.section_name|lower == "whole chorus"|lower %}
+   <div class="col s10 offset-s1 m6 l4">
+      <div class="card white-text pink accent-1">
+         <div class="card-title activator card-content center-align">
+            <i class="fas fa-music"></i>
+            {{ homework.song_name }}<br>
+            By: {{ homework.due_date }}
+            {% if user.is_musicteam == "on" %}
+            <!-- Modal Trigger -->
+            <div class="card-action card-links">
+               <a href="{{ url_for('edit_task', homework_id=homework._id) }}" class = "grey-text text-darken-4 edit-button">Edit</a>             
+               <a href="#{{ homework._id }}" class ="modal-trigger white-text delete-button">Delete</a>
+            </div>
+            <!-- Modal Structure -->
+            <div id="{{ homework._id }}" class="modal">
+               <div class="modal-content">
+                  <h4>Delete Task</h4>
+                  <p>Are you sure you wish to delete this task?</p>
+               </div>
+               <div class="modal-footer">
+                  <a href="{{ url_for ('homework') }}"
+                     class="modal-close pink lighten-2 white-text form-button btn-flat">Cancel</a>
+                  <a href="{{ url_for ('delete_task_musicteam', homework_id=homework._id) }}"
+                     class="modal-close red accent-4 white-text form-button btn-flat">Delete</a>
+               </div>
+            </div>
+            {% endif %} 
+         </div>
+         <div class="card-reveal">
+            <div class="card-title grey-text text-darken-4">
+               {{ homework.song_name }}<i
+                  class="fas fa-times right"></i>
+               <p class="task-title">{{ homework.task_title }}</p>
+               <p class="task-description">{{ homework.task_description }}</p>
+               <p class="task-set-by">Task set by {{ homework.created_by }}</p>
+            </div>
+         </div>
+      </div>
+   </div>
+   {% endif %}
+   {% endfor %}
+</div>
 {% endblock %}
