--- a/templates/musicteam.html
+++ b/templates/musicteam.html
@@ -28,8 +28,8 @@
             {% if user.is_musicteam == "on" %}
             <!-- Modal Trigger -->
             <div class="card-action card-links">
-               <a href="{{ url_for('edit_task', homework_id=homework._id) }}" class = "grey-text text-darken-4 edit-button">Edit</a>             
-               <a href="#{{ homework._id }}" class ="modal-trigger white-text delete-button">Delete</a>
+               <a href="{{ url_for('edit_task', homework_id=homework._id) }}" class="white-text task-button">Edit</a>             
+               <a href="#{{ homework._id }}" class="white-text task-button">Delete</a>
             </div>
             <!-- Modal Structure -->
             <div id="{{ homework._id }}" class="modal">
