--- a/templates/tenor.html
+++ b/templates/tenor.html
@@ -28,8 +28,8 @@
             {% if user.is_musicteam == "on" %}
             <!-- Modal Trigger -->
             <div class="card-action card-links">
-               <a href="{{ url_for('edit_task', homework_id=homework._id) }}" class = "grey-text text-darken-4 edit-button">Edit</a>             
-               <a href="#{{ homework._id }}" class ="modal-trigger white-text delete-button">Delete</a>
+               <a href="{{ url_for('edit_task', homework_id=homework._id) }}" class="task-button edit-button">Edit</a>             
+               <a href="#{{ homework._id }}" class="modal-trigger task-button delete-button">Delete</a>
             </div>
             <!-- Modal Structure -->
             <div id="{{ homework._id }}" class="modal">
@@ -40,7 +40,7 @@
                <div class="modal-footer">
                   <a href="{{ url_for ('homework') }}"
                      class="modal-close pink lighten-2 white-text form-button btn-flat">Cancel</a>
-                  <a href="{{ url_for ('delete_task_musicteam', homework_id=homework._id) }}"
+                  <a href="{{ url_for ('delete_task_tenor', homework_id=homework._id) }}"
                      class="modal-close red accent-4 white-text form-button btn-flat">Delete</a>
                </div>
             </div>
