--- a/templates/bari.html
+++ b/templates/bari.html
@@ -10,7 +10,7 @@
    <div class="col s4 offset-s4 add-task-button">
       <a href="{{ url_for('add_task') }}">
          <div class="card-panel pink accent-1 section-link">
-            Add Tasks
+            Add Task
          </div>
       </a>
    </div>
